@@ -1971,6 +1971,7 @@ int main(int argc, char *argv[])
     }
 
     source_view = new SourceView(app_context, source_view_parent);
+    source_view->set_max_glyphs(app_data.max_glyphs);
 
     if (app_data.separate_source_window)
     {
